--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <build>
         <plugins>
             <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
@@ -21,7 +22,13 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-deploy-plugin</artifactId>
+		<version>2.8.2</version>
+	    </plugin>
             <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surfire-plugin</artifactId>
                 <version>2.18.1</version>
             </plugin>
